--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "chat_app",
+  "name": "chat-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A simple real-time chat app",
+  "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/app.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1",
-    "socket.io": "^4.8.1"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.1"
   }
 }
